# cold-email-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  celerybeat-schedule.db  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
cold_email/: celery_app.py  config.py  database.py
cold_email/api/: main.py
cold_email/api/routes/: dashboard.py
cold_email/prompts/: email_draft.py  research.py
cold_email/templates/: dashboard.html
cold_email/workers/: __init__.py  constants.py  discovery.py  drafting.py  logistics.py  research.py
cold_email/workers/discovery/: __init__.py  constants.py  discovery.py
cold_email/workers/research/: __init__.py  constants.py  research.py
cold_email/workers/research/helpers/: NOTES.md  db_helpers.py  extraction.py
docs/superpowers/plans/: 2026-04-18-boilerplate.md
docs/superpowers/specs/: 2026-04-18-cold-email-agent-design.md
migrations/: 001_initial.sql
tests/: conftest.py  test_discovery.py  test_drafting.py  test_logistics.py  test_research.py
