[project]
name = "cold-email-agent"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "celery[redis]>=5.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "anthropic>=0.28",
    "firecrawl-py>=0.0.16",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.26",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-celery>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
