[project]
name = "cold-email-agent"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "celery[redis]>=5.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "anthropic>=0.28",
    "firecrawl-py>=0.0.16",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.26",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-celery>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008"]  # E501: formatter handles line length; B008: FastAPI Depends() pattern
